--- a/src/frontend/TuneShare/src/index.html
+++ b/src/frontend/TuneShare/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="/assets/logoTuneShare.png">
 </head>
 <body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <app-root></app-root>
 </body>
 </html>
