--- a/src/frontend/TuneShare/src/index.html
+++ b/src/frontend/TuneShare/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/logoTuneShare.png">
+  <script src="https://js-cdn.music.apple.com/musickit/v3/musickit.js"></script>
 </head>
 <body>
   <app-root></app-root>
